--- a/src/container/chat/ChatContainer.css
+++ b/src/container/chat/ChatContainer.css
@@ -1,145 +1,56 @@
-.chat_all {
-  list-style: none;
-  width: 900px;
-  height: 600px;
-  position: relative;
-  background: red;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.chat_all .header {
+.g_chat_all {
+  list-style: none;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: white;
+  overflow: hidden;
+}
+
+.g_chat_all .g_header {
   font-size: 1.3em;
   font-weight: bold;
-  width: 900px;
-  height: 60px;
-  background: #000080;
+  width: 100%;
+  height: 10vh;
+  background: linear-gradient(to right bottom, #0B0B3B, #000080);
   color: white;
   text-align: center;
-  line-height: 60px;
-}
-
-.chat_all .list_area {
-  float: left;
-  width: 120px;
-  height: 540px;
-  background: #eee;
-  overflow-y: scroll;
-}
-
-.chat_all .list_area .user {
-  font-size: 1.2em;
-  font-weight: bold;
-  text-shadow: 0 0 2px #000000;
-  color: white;
-  width: 120px;
-  height: 20px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  text-align: center;
-  background: #848484;
-}
-
-.chat_all .list_area .list {
-  width: 110px;
-  height: 20px;
-  padding-top: 7px;
-  padding-left: 7px;
-  border-style: solid;
-  border-width: 1px;
-  border-top: 0px;
-}
-
-.chat_all .chat_main {
-  float: right;
-  width: 780px;
-  height: 540px;
-  background: white;
+  line-height: 10vh;
   position: relative;
 }
 
-.chat_all .chat_main .message_area {
-  width: 780px;
-  height: 420px;
+.g_chat_all .g_header .g_leave {
+  float: right;
+  height: 10vh;
   position: relative;
-  z-index: 1;
-  overflow-y: scroll;
 }
 
-.chat_all .chat_main .message_area .leave {
-  width: 200px;
-  height: 40px;
-  float: right;
-  z-index: 2;
-  position: relative;
-  margin-top: 5px;
-  margin-right: 5px;
-}
+.g_chat_all .g_header .g_leave>button {
+  width: 10em;
+  font-size: 0.8em;
 
-.chat_all .chat_main .message_area .nickname {
-  clear: both;
-}
-
-.chat_all .chat_main .message_area .text {
-  color: white;
-  background-color: #848484;
-  text-shadow: 0 0 2px #000000;
-  border: solid;
-  border-width: 1.5px;
-  padding: 5px 10px 5px 10px;
-  clear: both;
-}
-
-.chat_all .chat_main .time {
-  font-size: 5px;
-  margin-top: 17px;
-}
-
-.chat_all .chat_main .message_area .other {
-  float: left;
-  margin-left: 10px;
-}
-
-.chat_all .chat_main .message_area .me {
-  float: right;
-  margin-right: 10px;
-}
-
-.chat_all .chat_main .input_box {
-  float: left;
-}
-
-.chat_all .chat_main>button {
-  width: 115px;
-  height: 120px;
-  float: right;
-}
-
-input {
-  width: 655px;
-  height: 115px;
-  line-height: 115px;
-}
-
-button {
-  float: right;
   background: #000080;
   color: #fff;
   border: none;
   position: relative;
   height: 100%;
 
-  font-size: 1em;
-  padding: 0.8em;
   cursor: pointer;
   transition: 800ms ease all;
   outline: none;
 }
 
-button:hover {
+.g_chat_all .g_header .g_leave>button:hover {
   background: #fff;
   color: #000080;
 }
 
-button:before,
+.g_chat_all .g_header .g_leave>button:before,
 button:after {
   content: '';
   position: absolute;
@@ -151,19 +62,203 @@ button:after {
   transition: 400ms ease all;
 }
 
-button:after {
+.g_chat_all .g_header .g_leave>button:after {
   right: inherit;
   top: inherit;
   left: 0;
   bottom: 0;
 }
 
-button:hover:before,
+.g_chat_all .g_header .g_leave>button:hover:before,
 button:hover:after {
   width: 100%;
   transition: 800ms ease all;
 }
 
-.messagesEnd {
+.g_chat_all .g_list_area {
   float: left;
+  width: 15%;
+  height: 90vh;
+  background: #eee;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.g_chat_all .g_list_area .g_user {
+  font-size: 1.2em;
+  font-weight: bold;
+  text-shadow: 0 0 0.1em #000000;
+  color: white;
+  width: 100%;
+  height: 5vh;
+  line-height: 5vh;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
+  text-align: center;
+  background: #848484;
+  background: linear-gradient(to right bottom, #848484, #585858);
+}
+
+.g_chat_all .g_list_area .g_list {
+  width: 97%;
+  height: 2em;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
+  padding-left: 2%;
+  border-style: solid;
+  border-width: 0.05em;
+  border-top: 0;
+  line-height: 2em;
+}
+
+.g_chat_all .g_chat_main {
+  float: right;
+  width: 85%;
+  height: 70vh;
+  background: white;
+  position: relative;
+}
+
+.g_chat_all .g_chat_main .g_message_area {
+  width: 100%;
+  height: 70vh;
+  position: relative;
+  overflow-y: scroll;
+}
+
+.g_chat_all .g_chat_main .g_message_area .g_nickname {
+  font-size: 1em;
+  margin-left: 1.2em;
+  clear: both;
+}
+
+.g_chat_all .g_chat_main .g_message_area .g_text {
+  color: white;
+  font-size: 1.2em;
+  background-color: #848484;
+  text-shadow: 0 0 0.2em #000000;
+  border-style: solid;
+  border-width: 0.15em;
+  border-radius: 0.8em;
+  padding: 0.5em 1em 0.5em 1em;
+  clear: both;
+}
+
+.g_chat_all .g_chat_main .g_time {
+  font-size: 0.7em;
+  margin-top: 2.9em;
+}
+
+.g_chat_all .g_chat_main .g_message_area .g_other {
+  float: left;
+  margin-left: 0.8em;
+}
+
+.g_chat_all .g_chat_main .g_message_area .g_me {
+  float: right;
+  margin-right: 0.8em;
+}
+
+.g_chat_all .g_bottom_area {
+  width: 85%;
+  height: 20vh;
+  position: relative;
+  float: right;
+}
+
+.g_chat_all .g_bottom_area .g_send_area {
+  width: 14.3%;
+  height: 20vh;
+  position: relative;
+  float: right;
+  background: #000080;
+}
+
+.g_chat_all .g_bottom_area .g_send_area>button {
+  font-size: 1.2em;
+  width: 100%;
+
+  background: #000080;
+  color: #fff;
+  border: none;
+  position: relative;
+  height: 100%;
+
+  cursor: pointer;
+  transition: 800ms ease all;
+  outline: none;
+}
+
+.g_chat_all .g_bottom_area .g_send_area>button:hover {
+  background: #fff;
+  color: #000080;
+}
+
+.g_chat_all .g_bottom_area .g_send_area>button:before,
+button:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 0.2em;
+  width: 0;
+  background: #000080;
+  transition: 400ms ease all;
+}
+
+.g_chat_all .g_bottom_area .g_send_area>button:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
+}
+
+.g_chat_all .g_bottom_area .g_send_area>button:hover:before,
+button:hover:after {
+  width: 100%;
+  transition: 800ms ease all;
+}
+
+.g_chat_all .g_bottom_area>input {
+  width: 85%;
+  height: 20vh;
+  float: left;
+  position: relative;
+  border-style: solid;
+  border-width: 0.1em 0 0 0;
+}
+
+@media only screen and (max-width:768px) {
+  .g_chat_all .g_list_area {
+    display: none;
+  }
+
+  .g_chat_all .g_list_area .g_user {
+    display: none;
+  }
+
+  .g_chat_all .g_list_area .g_list {
+    display: none;
+  }
+
+  .g_chat_all .g_chat_main {
+    width: 100%;
+  }
+
+  .g_chat_all .g_bottom_area {
+    width: 100%;
+  }
+
+  .g_chat_all .g_bottom_area>input {
+    width: 80%;
+  }
+
+  .g_chat_all .g_bottom_area .g_send_area {
+    width: 18.7%;
+    height: 20vh;
+    position: relative;
+    float: right;
+    background: #000080;
+  }
 }
