--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root {
+  height: 100%;
+  display: flex;
+}
+
+.main_container {
+  height: 100%;
+}
+
+.login_container {
+  height: 100%;
+}
+
+.join_container {
+  height: 100%;
+}
