--- a/src/container/join/JoinContainer.scss
+++ b/src/container/join/JoinContainer.scss
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@import "_variables.scss";
 
 html,
 body {
@@ -6,7 +6,6 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-
 }
 
 .left {
@@ -59,26 +58,6 @@ input[type=password] {
   font-size: 2vw;
   font-family: helvetica;
   height: 6vh;
-}
-
-.login_button {
-  position: relative;
-  top: 20%;
-  border-radius: 12px;
-  font-family: helvetica;
-  margin: auto;
-  margin-bottom: 20px;
-  font-size: 2.5vw;
-  font-weight: bold;
-  text-shadow: 0 0 0.1em #000000;
-  color: white;
-  width: 70%;
-  height: 5vh;
-  line-height: 5vh;
-  padding-top: 1.5vh;
-  padding-bottom: 1.5vh;
-  text-align: center;
-  background-color: #9895b1;
 }
 
 .signup_button {
@@ -172,13 +151,6 @@ input[type=password] {
     height: 6vh;
   }
 
-  .login_button {
-    position: relative;
-    top: 20%;
-    font-size: 6vw;
-    width: 50%;
-  }
-
   .signup_button {
     position: relative;
     top: 20%;
@@ -187,16 +159,15 @@ input[type=password] {
   }
 }
 
-.login_container {
+.join_container {
   background-image: url('/img/background.jpg');
   background-size: 100% 100%;
 }
 
 .err {
-  position: relative;
-  top: 18%;
   font-family: helvetica;
   margin: auto;
+  margin-bottom: 1.2vh;
   font-size: 1vw;
   color: red;
 }
