--- a/src/container/main/MainContainer.scss
+++ b/src/container/main/MainContainer.scss
@@ -1,3 +1,5 @@
+@import "_variables.scss";
+
 main {
   height: 100%;
   margin: 10px;
@@ -15,6 +17,7 @@ header {
 #font {
   padding-top: 120px;
   padding-left: 50px;
+  @include animate(slideUp);
 }
 
 #tablet {
