--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,26 @@
+/* scroll */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* 스크롤바의 width */
+
+::-webkit-scrollbar-track {
+  background-color: #f0f0f0;
+}
+
+/* 스크롤바의 전체 배경색 */
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #a1a1a1, #a1a1a1);
+}
+
+/* 스크롤바 색 */
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
