--- a/src/container/privatechat/PrivateChatContainer.scss
+++ b/src/container/privatechat/PrivateChatContainer.scss
@@ -14,7 +14,7 @@
   font-weight: bold;
   width: 100%;
   height: 10vh;
-  background: linear-gradient(to right bottom, #0B0B3B, #000080);
+  background: $g-chat-header;
   color: white;
   text-align: center;
   line-height: 10vh;
@@ -28,14 +28,14 @@
 }
 
 .p_chat_all .p_header .p_leave>button {
-  width: 10em;
+  display: table-caption;
   font-size: 0.8em;
-
-  background: #000080;
+  background: $g-chat-header-leave;
   color: #fff;
-  border: none;
+  border: 2px solid white;
   position: relative;
-  height: 100%;
+  height: 50%;
+  border-radius: 0.5em;
 
   cursor: pointer;
   transition: 800ms ease all;
@@ -44,7 +44,9 @@
 
 .p_chat_all .p_header .p_leave>button:hover {
   background: #fff;
-  color: #000080;
+  color: $g-chat-background;
+  transition: 400ms ease all;
+  border: 2px solid $g-chat-background;
 }
 
 .p_chat_all .p_header .p_leave>button:before,
@@ -55,7 +57,7 @@ button:after {
   right: 0;
   height: 0.2em;
   width: 0;
-  background: #000080;
+  background: $g-chat-background;
   transition: 400ms ease all;
 }
 
@@ -72,6 +74,58 @@ button:hover:after {
   transition: 800ms ease all;
 }
 
+.p_chat_all .p_left_area {
+  float: left;
+  width: 15%;
+  height: 75vh;
+}
+
+.p_chat_all .p_left_area .p_user {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: $g-chat-left-title-color;
+  width: 100%;
+  height: 3vh;
+  line-height: 3vh;
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
+  text-align: center;
+  background: $g-chat-left-title;
+  float: left;
+  position: relative;
+  @include box-shadow;
+}
+
+.p_chat_all .p_left_area .p_list_area {
+  float: left;
+  width: 100%;
+  height: 79vh;
+  background: #eee;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.p_chat_all .p_list_area .p_list {
+  margin: 0.5em;
+  width: calc(100% - 1.2em);
+  height: 2em;
+  text-align: center;
+  border-radius: 0.5em;
+  line-height: 2em;
+  background: #c2c2c2;
+  cursor: pointer;
+  @include box-shadow;
+  @include animate(slideUp);
+}
+
+.p_chat_all .p_list_area .p_list:hover {
+  margin: 0.5em;
+  width: calc(100% - 1.2em);
+  color: white;
+  background: $g-chat-left-list-hover;
+}
+
 .p_chat_all .p_chat_main {
   float: right;
   width: 85%;
@@ -84,8 +138,9 @@ button:hover:after {
   width: 100%;
   height: 70vh;
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
+
 
 .p_chat_all .p_chat_main .p_message_area .p_nickname {
   font-size: 1em;
@@ -94,55 +149,72 @@ button:hover:after {
 }
 
 .p_chat_all .p_chat_main .p_message_area .p_text {
+  margin-top: 0.2em;
+  word-break: break-all;
+  max-width: 50%;
   color: white;
   font-size: 1.2em;
-  background-color: #848484;
-  text-shadow: 0 0 0.2em #000000;
-  border-style: solid;
-  border-width: 0.15em;
+  background-color: $g-chat-text-background;
   border-radius: 0.8em;
-  padding: 0.5em 1em 0.5em 1em;
+  padding: 0.2em 1em;
   clear: both;
+  @include box-shadow;
 }
 
 .p_chat_all .p_chat_main .p_time {
   font-size: 0.7em;
-  margin-top: 2.9em;
+  margin-top: 1.7em;
 }
 
 .p_chat_all .p_chat_main .p_message_area .p_other {
   float: left;
   margin-left: 0.8em;
+  @include animate(rightIn);
 }
 
 .p_chat_all .p_chat_main .p_message_area .p_me {
   float: right;
   margin-right: 0.8em;
+  @include animate(leftIn);
 }
 
+.p_chat_all .p_chat_main .p_message_area .p_system {
+  background: $g-chat-system-background;
+  max-width: 70vh;
+  width: 100%;
+  text-align: center;
+  font-size: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  @include animate(slideUp);
+}
+
+
 .p_chat_all .p_bottom_area {
-  width: 85%;
+  width: 100%;
   height: 20vh;
   position: relative;
-  float: right;
 }
 
 .p_chat_all .p_bottom_area .p_send_area {
-  width: 14.3%;
-  height: 20vh;
+  width: calc(14.95% - 0.20em);
+  height: 100%;
   position: relative;
   float: right;
-  background: #000080;
 }
 
 .p_chat_all .p_bottom_area .p_send_area>button {
+  border: 0;
+  display: block;
+  background: $g-chat-right-send;
+  color: #fff;
+  position: relative;
+  border-radius: 0 0.5em 0.5em 0;
+
   font-size: 1.2em;
   width: 100%;
-
-  background: #000080;
-  color: #fff;
-  border: none;
-  position: relative;
   height: 100%;
 
   cursor: pointer;
@@ -152,7 +224,7 @@ button:hover:after {
 
 .p_chat_all .p_bottom_area .p_send_area>button:hover {
   background: #fff;
-  color: #000080;
+  color: $g-chat-background;
 }
 
 .p_chat_all .p_bottom_area .p_send_area>button:before,
@@ -163,7 +235,7 @@ button:after {
   right: 0;
   height: 0.2em;
   width: 0;
-  background: #000080;
+  background: $g-chat-background;
   transition: 400ms ease all;
 }
 
@@ -181,24 +253,28 @@ button:hover:after {
 }
 
 .p_chat_all .p_bottom_area>input {
-  width: 85%;
-  height: 20vh;
+  width: calc(84.95%);
+  height: 100%;
   float: left;
   position: relative;
-  border-style: solid;
-  border-width: 0.1em 0 0 0;
+  border: 0.05em black solid;
+  border-radius: 0.5em 0 0 0.5em;
 }
 
 @media only screen and (max-width:768px) {
-  .p_chat_all .p_list_area {
+  .p_left_area {
     display: none;
   }
 
-  .p_chat_all .p_list_area .p_user {
+  .p_chat_all .p_left_area .p_list_area {
     display: none;
   }
 
-  .p_chat_all .p_list_area .p_list {
+  .p_chat_all .p_left_area .p_user {
+    display: none;
+  }
+
+  .p_chat_all .p_left_area .p_list_area .p_list {
     display: none;
   }
 
@@ -215,107 +291,16 @@ button:hover:after {
   }
 
   .p_chat_all .p_bottom_area .p_send_area {
-    width: 18.7%;
-    height: 20vh;
+    width: calc(20% - 0.22em);
+    height: 100%;
     position: relative;
     float: right;
-    background: #000080;
+    background: $g-chat-background;
   }
 }
 
-.p_chat_all .p_list_area {
+.messagesEnd {
   float: left;
-  width: 15%;
-  height: 90vh;
-  background: #eee;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  position: relative;
-}
-
-.p_chat_all .p_list_area .p_user {
-  font-size: 1.2em;
-  font-weight: bold;
-  text-shadow: 0 0 0.1em #000000;
-  color: white;
-  width: 100%;
-  height: 5vh;
-  line-height: 5vh;
-  padding-top: 1.5vh;
-  padding-bottom: 1.5vh;
-  text-align: center;
-  background: #848484;
-  background: linear-gradient(to right bottom, #848484, #585858);
-}
-
-.p_chat_all .p_list_area .p_user_area {
-  float: left;
-  width: 100%;
-  height: 77vh;
-  background: #eee;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  position: relative;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list {
-  width: 97%;
-  height: 2em;
-  padding-top: 1.5%;
-  padding-bottom: 1.5%;
-  padding-left: 2%;
-  border-style: solid;
-  border-width: 0.05em;
-  border-top: 0;
-  line-height: 2em;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list>button {
-  width: 100%;
-
-  padding-top: 3.5%;
-  padding-bottom: 3.5%;
-  margin-top: 0.1em;
-  font: initial;
-  background: #eee;
-  color: #000;
-  position: relative;
-  border: none;
-
-  cursor: pointer;
-  transition: 800ms ease all;
-  outline: none;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list>button:hover {
-  background: #eee;
-  color: #848484;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list>button:before,
-button:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 0.2em;
-  width: 0;
-  background: #848484;
-  transition: 400ms ease all;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list>button:after {
-  background: #848484;
-  right: inherit;
-  top: inherit;
-  left: 0;
-  bottom: 0;
-}
-
-.p_chat_all .p_list_area .p_user_area .p_user_list>button:hover:before,
-button:hover:after {
-  width: 100%;
-  transition: 800ms ease all;
 }
 
 .p_chat_all .p_list_area .p_search {
