--- a/src/container/chat/ChatContainer.scss
+++ b/src/container/chat/ChatContainer.scss
@@ -77,7 +77,7 @@ button:hover:after {
 .g_chat_all .g_left_area {
   float: left;
   width: 15%;
-  height: 75vh;
+  height: 90vh;
 }
 
 .g_chat_all .g_left_area .g_user {
@@ -198,7 +198,7 @@ button:hover:after {
 }
 
 .g_chat_all .g_bottom_area .g_send_area {
-  width: calc(14.95% - 0.20em);
+  width: 15%;
   height: 100%;
   position: relative;
   float: right;
@@ -252,8 +252,9 @@ button:hover:after {
 }
 
 .g_chat_all .g_bottom_area>input {
-  width: calc(84.95%);
-  height: 100%;
+  width: calc(85% - 0.1em);
+  padding: 0;
+  height: calc(100% - 0.05em);
   float: left;
   position: relative;
   border: 0.05em black solid;
@@ -286,11 +287,11 @@ button:hover:after {
   }
 
   .g_chat_all .g_bottom_area>input {
-    width: 80%;
+    width: calc(80% - 0.1em);
   }
 
   .g_chat_all .g_bottom_area .g_send_area {
-    width: calc(20% - 0.22em);
+    width: 20%;
     height: 100%;
     position: relative;
     float: right;
