--- a/src/container/main/MainContainer.scss
+++ b/src/container/main/MainContainer.scss
@@ -72,5 +72,5 @@ nav a:hover {
 }
 
 .main_container {
-  background-image: url('/img/main3.jpg');
+  background-image: url('../../img/main3.jpg');
 }
