--- a/src/container/join/JoinContainer.scss
+++ b/src/container/join/JoinContainer.scss
@@ -159,7 +159,7 @@ input[type=password] {
 }
 
 .join_container {
-  background-image: url('/img/background.jpg');
+  background-image: url('../../img/background.jpg');
   background-size: 100% 100%;
 }
 
