--- a/src/container/login/LoginContainer.scss
+++ b/src/container/login/LoginContainer.scss
@@ -190,7 +190,7 @@ input[type=password] {
 }
 
 .login_container {
-  background-image: url('/img/background.jpg');
+  background-image: url('../../img/background.jpg');
   background-size: 100% 100%;
 }
 
