Fix err rendering

--- a/src/container/chat/ChatContainer.scss
+++ b/src/container/chat/ChatContainer.scss
@@ -302,3 +302,11 @@ button:hover:after {
 .messagesEnd {
   float: left;
 }
+
+.g_err {
+  font-family: helvetica;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  font-size: 1vw;
+  color: red;
+}
