--- a/src/container/privatechat/PrivateChatContainer.scss
+++ b/src/container/privatechat/PrivateChatContainer.scss
@@ -394,3 +394,11 @@ button:hover:after {
 .messagesEnd {
   float: left;
 }
+
+.p_err {
+  font-family: helvetica;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  font-size: 1vw;
+  color: red;
+}
